<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/anything"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_username"
        android:inputType="textNoSuggestions"
        android:nextFocusDown="@+id/realname"
        android:nextFocusUp="@+id/button_register" />

    <EditText
        android:id="@+id/realname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_realname"
        android:inputType="textCapWords|textPersonName"
        android:nextFocusDown="@+id/button_register"
        android:nextFocusUp="@+id/username" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:nextFocusDown="@+id/username"
        android:nextFocusUp="@+id/realname"
        android:text="@string/button_label_register"
        android:textSize="20sp" >
    </Button>

</LinearLayout>